--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "website/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config":{
+            "maxLambdaSize":"15mb","runtime":"python"
+        }
       },
       {
        
